@@ -1,3 +1,6 @@
+Tue, 19 Sep 2006 22:52:42 +0200 <informancer@web.de>
+	* Added item deletion and update to ChannelList
+
 Mon, 18 Sep 2006 23:04:59 +0200 <informancer@web.de>
 	* Added ChannelList and tests
 
